--- a/assets/package.json
+++ b/assets/package.json
@@ -14,13 +14,26 @@
   "author": "CloudBop",
   "license": "ISC",
   "private": true,
-  "browserlist": [
+  "browserslist": [
     "defaults"
   ],
   "devDependencies": {
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "@wordpress/base-styles": "^3.4.0",
+    "@wordpress/block-editor": "^5.3.0",
+    "@wordpress/blocks": "^8.0.0",
+    "@wordpress/components": "^13.0.0",
+    "@wordpress/compose": "^3.25.0",
+    "@wordpress/data": "^4.27.0",
+    "@wordpress/dependency-extraction-webpack-plugin": "^3.1.0",
+    "@wordpress/element": "^2.20.0",
+    "@wordpress/eslint-plugin": "^9.0.1",
+    "@wordpress/hooks": "^2.12.0",
+    "@wordpress/i18n": "^3.19.0",
+    "@wordpress/icons": "^2.10.0",
+    "@wordpress/server-side-render": "^1.21.0",
     "babel-loader": "^8.1.0",
     "browser-sync": "^2.26.13",
     "browser-sync-webpack-plugin": "^2.2.2",
@@ -30,6 +43,7 @@
     "css-loader": "^4.2.2",
     "cssnano": "^4.1.10",
     "file-loader": "^6.0.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^0.11.0",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
