--- a/assets/package.json
+++ b/assets/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prod": "cross-env NODE_ENV=production webpack --mode production --progress",
     "dev": "cross-env NODE_ENV=development webpack --watch --mode development --progress",
-    "clean": "rm -rf build/*"
+    "clean": "rm -rf build/*",
+    "svg":"svgr -d src/js/icons src/icons"
   },
   "keywords": [
     "wordpress"
@@ -21,6 +22,7 @@
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "@svgr/cli": "^5.5.0",
     "@wordpress/base-styles": "^3.4.0",
     "@wordpress/block-editor": "^5.3.0",
     "@wordpress/blocks": "^8.0.0",
