--- a/assets/package.json
+++ b/assets/package.json
@@ -7,7 +7,9 @@
     "prod": "cross-env NODE_ENV=production webpack --mode production --progress",
     "dev": "cross-env NODE_ENV=development webpack --watch --mode development --progress",
     "clean": "rm -rf build/*",
-    "svg":"svgr -d src/js/icons src/icons"
+    "svg": "svgr -d src/js/icons src/icons",
+    "lint": "eslint src/js/*",
+    "lint:fix": "eslint --fix src/js/*"
   },
   "keywords": [
     "wordpress"
@@ -44,11 +46,15 @@
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.2",
     "cssnano": "^4.1.10",
+    "eslint": "^7.23.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-jsdoc": "^32.3.0",
     "file-loader": "^6.0.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^0.11.0",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "prettier": "^2.2.1",
     "sass-loader": "^10.0.1",
     "sass-mq": "^5.0.1",
     "style-loader": "^1.2.1",
